[gd_scene load_steps=48 format=2]

[ext_resource path="res://Sprites/Yerl4Attack.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Yerl4Walk.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Enemy4.gd" type="Script" id=3]
[ext_resource path="res://SFX/Attack.wav" type="AudioStream" id=4]
[ext_resource path="res://Sprites/yerl4DefensiveWalk.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.40711, 5.81891 )

[sub_resource type="CircleShape2D" id=2]
radius = 21.776

[sub_resource type="CapsuleShape2D" id=3]
radius = 5.62988
height = 1.80236

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8.30859, 6.11497 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 28, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 56, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 84, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 112, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 140, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 168, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 196, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 252, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 280, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 308, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 336, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 364, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 392, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 420, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 28, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 56, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 84, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 112, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 140, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 168, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 5 )
region = Rect2( 28, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 5 )
region = Rect2( 56, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 5 )
region = Rect2( 84, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 5 )
region = Rect2( 112, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 5 )
region = Rect2( 140, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 5 )
region = Rect2( 168, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 5 )
region = Rect2( 196, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 5 )
region = Rect2( 224, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 5 )
region = Rect2( 252, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 5 )
region = Rect2( 280, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 5 )
region = Rect2( 308, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 5 )
region = Rect2( 336, 0, 28, 20 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 5 )
region = Rect2( 364, 0, 28, 20 )

[sub_resource type="SpriteFrames" id=42]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "Attack",
"speed": 10.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "Walk",
"speed": 8.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "Defensive",
"speed": 5.0
} ]

[node name="Enemy4" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 1088
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 3.88715, 1.84457 )
shape = SubResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 2 )

[node name="DefendingArea" type="Area2D" parent="."]
position = Vector2( 0.63425, 0.542236 )
scale = Vector2( 1.35727, 0.9846 )
collision_layer = 4
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="DefendingArea"]
position = Vector2( 2.90075, 0.334702 )
shape = SubResource( 3 )

[node name="AttackingArea" type="Area2D" parent="."]
visible = false
position = Vector2( 3.15251, 1.82818 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackingArea"]
shape = SubResource( 4 )

[node name="AttackingMeleeArea" type="Area2D" parent="."]
visible = false
position = Vector2( 2.75995, 1.75787 )
scale = Vector2( 1.03302, 1 )
monitorable = false
collision_layer = 0
collision_mask = 32768

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackingMeleeArea"]
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 42 )
animation = "Defensive"
frame = 8
playing = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.722
pitch_scale = 1.3
[connection signal="hit" from="." to="." method="_on_Enemy2_hit"]
[connection signal="area_entered" from="AttackingArea" to="." method="_on_AttackingArea_area_entered"]
[connection signal="area_entered" from="AttackingMeleeArea" to="." method="_on_AttackingMeleeArea_area_entered" flags=3]
